# updater-hack

./: .gitignore  CMakeLists.txt  README  compile.sh
applypatch/: CMakeLists.txt  freecache.cpp
base/: CMakeLists.txt  errors_unix.cpp  file.cpp  howto  logging.cpp
base/include/android-base/: properties.h
brotli/: CMakeLists.txt
bsdiff/: Android.bp  BUILD.gn  CMakeLists.txt  a.out  howto  patch_writer.cc
edify/: CMakeLists.txt  a.out  expr.cpp.234r.expand  expr.cpp.235r.vregs  expr.cpp.236r.into_cfglayout  expr.cpp.237r.jump  expr.cpp.249r.reginfo  expr.cpp.269r.outof_cfglayout  expr.cpp.270r.split1  expr.cpp.272r.dfinit  expr.cpp.273r.mode_sw  expr.cpp.274r.asmcons  expr.cpp.284r.split2  expr.cpp.288r.pro_and_epilogue  expr.cpp.291r.jump2  expr.cpp.304r.stack  expr.cpp.305r.alignments  expr.cpp.307r.mach  expr.cpp.311r.eh_ranges  expr.cpp.313r.shorten  expr.cpp.314r.nothrow  expr.cpp.315r.dwarf2  expr.cpp.317r.dfinish  howto  parser.yy
ext4_utils/: CMakeLists.txt  ext4_crypt.cpp  ext4_crypt_init_extensions.cpp
fec/: CMakeLists.txt
libcrypto_utils/: android_pubkey.c
libcutils/: CMakeLists.txt  fs_config.cpp  sched_policy.cpp  sockets_unix.cpp
libcutils/include/cutils/: properties.h
libcutils/unused/: properties.cpp
libfec/: fec_private.h
libfec/include/fec/: io.h
libutils/: CMakeLists.txt  FileMap.cpp
libziparchive/: CMakeLists.txt  zip_archive.cc  zip_archive_stream_entry.cc  zip_writer.cc
otautil/: CMakeLists.txt  a.out  dirutil.cpp  howto  parse_install_logs.cpp  sysutil.cpp
updater/: CMakeLists.txt  blockimg.cpp  install.cpp  updater.cpp
updater/include/updater/: install.h
